Fixed UI issues (#131)
* Fixed UI issues
- show navigation map by default only for desktop users and for mobile users the navigation map is hidden by default
- shwon an alert when user saved and next the last question of the section

* Fixed an issue in the calculation of Total time spent. chaanged the application helper method wrongly calculating the difference of time

--- a/app/assets/stylesheets/students/home.scss
+++ b/app/assets/stylesheets/students/home.scss
@@ -60,13 +60,13 @@
   margin-bottom: 0;
   margin-right: -2px;
   @media (max-width: 575px) {
-    width: 90%;
+    width: 0;
     .close-btn {
       left: -5px;
     }
   }
   @media (min-width: 576px) {
-    width: 350px;
+    width: 0;
     padding: 0 13px 0 13px;
   }
 }
